# omega-fx-v2

./: .gitignore  README.md  RUN_ALL_DEMO.bat  RUN_BOTH_ACCOUNTS.bat  RUN_DASHBOARD_A.bat  RUN_DASHBOARD_B.bat  RUN_ENGINE_DEMO.bat  RUN_ENGINE_DEMO_A.bat  RUN_ENGINE_DEMO_A_COMBINED.bat  RUN_ENGINE_DEMO_B.bat  RUN_OMEGA_A.bat  RUN_OMEGA_A_COMBINED.bat  RUN_OMEGA_B.bat  RUN_OMEGA_BOTH.bat  RUN_RESEARCH_A.bat  RUN_RESEARCH_B.bat  RUN_WATCHDOG_DEMO.bat  VERSION.md  mt5_creds.local.bat.template  pyproject.toml  requirements.txt  run_dashboard.bat  run_dashboard_demo.bat  run_dashboard_mt5.bat  run_ftmo_multi.bat  run_full_pipeline.bat  run_gbpjpy_fastwindows.bat  run_multi_full_pipeline.bat  run_usdjpy_exp_v2_fastwindows.bat  run_usdjpy_exp_v2_kd_primary_optimize.bat  run_usdjpy_exp_v2_optimize.bat  run_usdjpy_exp_v3_fastwindows.bat  run_usdjpy_exp_v3_optimize.bat  run_usdjpy_v3_fastwindows.bat
dashboard/: app.py  mt5_health.py  portfolio_exp.py
scripts/: __init__.py  backtest_combined_rolling.py  backtest_splash_pass.py  build_admission_table.py  demo_backtest_one_trade.py  demo_eval_monte_carlo.py  demo_eval_sim.py  demo_eval_with_signals.py  demo_fastpass_gbpjpy_core_fastwindows_mt5.py  demo_fastpass_multi_usdjpy_gbpjpy_fastwindows_mt5.py  demo_fastpass_usdjpy_exp_v2_fastwindows_mt5.py  demo_fastpass_usdjpy_exp_v3_fastwindows_mt5.py  demo_fastpass_usdjpy_v3_ev_sweep_mt5.py  demo_fastpass_usdjpy_v3_fastwindows_mt5.py  demo_fastpass_usdjpy_v3_mt5_long.py  demo_fastpass_usdjpy_v3_rr_mt5_long.py  demo_ftmo_multi_usdjpy_exp_v2_full_pipeline_mt5.py  demo_mr_multi_symbol_scan.py  (+33 more)
(+18 files in other folders)
