[project]
name = "omega-fx-v2"
version = "0.1.0"
description = "Lean prop trading kernel for gold"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "yfinance>=0.2",
    "MetaTrader5>=5.0",
    "Flask>=2.3",
    "openai>=1.12.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
